--- a/index.html
+++ b/index.html
@@ -13,6 +13,75 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="l-header">
+            <div class="l-header__logo"><img src="./src/img/logo.png"></div>
+            <div class="l-header__nav">
+                <div class="l-header__nav-item"><a href="">選ばれる3つの理由</a></div>
+                <div class="l-header__nav-item"><a href="">設置までの流れ</a></div>
+                <div class="l-header__nav-item"><a href="">設置の実績</a></div>
+                <div class="l-header__nav-item"><a href="">お客様の声</a></div>
+                <div class="l-header__nav-item"><a href="">よくある質問</a></div>
+            </div>
+            <div class="l-header__inquiry"><a href=""><img src="./src/img/inquiry.png"></a></div>
+        </div>
+    </header>
+
+
+    <main>
+        <section class="l-hero">
+            <div class="l-hero__textwrap">
+                <div class="l-hero__textwrap-item01"><span>補助金</span>に申し込みで、</div>
+                <div class="l-hero__textwrap-item02 ">安く、早く、お得に。</div>
+                <div class="l-hero__textwrap-item03">太陽光パネルを設置できます。</div>
+            </div>
+            <div class="l-hero__CV">
+                <img src="./src/img/cv.png">
+            </div>
+        </section>
+
+        <section class="l-trouble">
+            <div class="l-trouble__imgwrap">
+                <div class="l-trouble__imgwrap-img"> <img src="./src/img/section.png"></div>
+            </div>
+        </section>
+        <section class="l-about">
+            <div class="l-about__wrap">
+                <div class="l-about__wrap-ttl">そんな時は・・・</div>
+                <div class="l-about__wrap__imgtext"><span><img src="./src/img/logo.png"></span> にお任せ！</div>
+            </div>
+            <div class="l-about__inner">
+                <div class="l-about__inner-img">
+                    <img src="./src/img/home_about.png">
+                </div>
+                <div class="l-about__inner__textwrap">
+                    <div class="l-about__inner__textwrap-ttl">
+                        確かな技術力と、<br>
+                        迅速な対応をモットーに。
+                    </div>
+                    <div class="l-about__inner__textwrap-text">
+                        「住まいの不安、不便<br>
+                        不快をなくしお客様が安心<br>
+                        して住める居住空間を提供する」<br>
+                        私たちはそんな企業を指名のもと、<br>
+                        太陽光発電、蓄電池、外装塗装<br>
+                        のサービスを展開。<br>
+                        お客様とともに持続可能な未来を目指し、<br>
+                        地域社会の発展に尽力します。<br>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="l-reason">
+            <div class="l-reason__wrap">
+                <div class="l-reason__ttlwrap">
+                    .l-reason__ttlwrap-
+                </div>
+                
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
