--- a/index.html
+++ b/index.html
@@ -79,24 +79,57 @@
                 <div class="l-hero__textwrap-item03">太陽光パネルを設置できます。</div>
             </div>
             <div class="l-hero__CV">
-                <img src="./src/img/cv.png">
+                <div class="l-hero__container">
+                    <img src="./src/img/cv.png">
+                </div>
             </div>
         </section>
 
         <section class="l-trouble">
-            <div class="l-trouble__imgwrap">
-                <div class="l-trouble__imgwrap-pc">
-                    <img src="./src/img/section.png">
-                </div>
-                <div class="l-trouble__imgwrap-sp">
-                    <img src="./src/img/section_sp.png">
+            <div class="l-trouble__container">
+                <div class="l-trouble-ttl">こんな経験ありませんか？</div>
+                <div class="l-trouble__wrapper">
+
+                    <div class="l-trouble__wrapper__calc">
+                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble01.png"></div>
+                        <div class="l-trouble__wrapper__calc-text">
+                            <span>電気代</span>の<span>値上がり</span>で<br>
+                            節電している
+                        </div>
+                    </div>
+                    <div class="l-trouble__wrapper__calc">
+                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble02.png"></div>
+                        <div class="l-trouble__wrapper__calc-text">
+                            節電のために太陽光パネルを<br>
+                            つけたいけど<span>メンテナンス</span>が面倒
+                        </div>
+                    </div>
+                    <div class="l-trouble__wrapper__calc">
+                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble03.png"></div>
+                        <div class="l-trouble__wrapper__calc-text">
+                            太陽光パネルを設置したいけど<br>
+                            <span>費用</span>が<span>高い</span>
+                        </div>
+                    </div>
+                    <div class="l-trouble__wrapper__calc">
+                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble04.png"></div>
+                        <div class="l-trouble__wrapper__calc-text">
+                            設置するのに<span>複数</span>の<span>会社</span><br>
+                            の契約で <span>費用</span>が、、、
+                        </div>
+                    </div>
                 </div>
             </div>
+            </div>
         </section>
+
         <section class="l-about">
             <div class="l-about__wrap">
                 <div class="l-about__wrap-ttl">そんな時は・・・</div>
-                <div class="l-about__wrap__imgtext"><span><img src="./src/img/logo.png"></span> にお任せ！</div>
+                <div class="l-about__wrap__imgtext">
+                    <div class="l-about__wrap__imgtext-img"><img src="./src/img/logo.png"></div>
+                    <div class="l-about__wrap__imgtext-text">にお任せ！</div>
+                </div>
             </div>
             <div class="l-about__inner">
                 <div class="l-about__inner-img">
@@ -514,11 +547,11 @@
                     <div class="l-question__wrapper">
                         <div class="l-question__wrapper-ttl">太陽光メンテナンスについて</div>
                         <div class="l-question__wrapper__list">
-                            <div class="l-question__wrapper__list-item">点検やメンテナンスにはどれくらいの感覚でいいですか？</div>
+                            <div class="l-question__wrapper__list-item">点検やメンテナンスはどれくらいの間隔で行えばいいですか？</div>
                             <div class="l-question__wrapper__list__anser">
                                 <div class="l-question__wrapper__list__anser-text">
                                     パネルが設置されている環境条件（立地・屋根や野立て等の置き場・周囲の環境）、パネルの種類（多結晶・単結晶）によって点検やメンテナンスの頻度は異なります。<br>
-                                    一般的には、ねん1〜2のメンテナンス推奨及び環境整備（草刈り等）と定期点検の義務化が定められています。
+                                    一般的には、年1〜2のメンテナンス推奨及び環境整備（草刈り等）と定期点検の義務化が定められています。
                                     パネルにおきなひび割れ、電圧や抵抗値に異常が見られる場合は早急に修理をする必要があります。
                                 </div>
                             </div>
