--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="l-trouble__wrapper__calc">
                         <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble04.png"></div>
                         <div class="l-trouble__wrapper__calc-text">
-                            設置するのに<span>複数</span>の<span>会社</span><br>
+                            設置するのに<spa n>複数</spa>の<span>会社</span><br>
                             の契約で <span>費用</span>が、、、
                         </div>
                     </div>
