変更しました

--- a/index.html
+++ b/index.html
@@ -89,8 +89,13 @@
             <div class="l-trouble__container">
                 <div class="l-trouble-ttl">こんな経験ありませんか？</div>
                 <div class="l-trouble__wrapper">
-
-                    <div class="l-trouble__wrapper__calc">
+                    <div class="l-trouble__wrapper-pcimg">
+                        <img src="./src/img/section__pc.png">
+                    </div>
+                    <div class="l-trouble__wrapper-spimg">
+                        <img src="./src/img/section__sp.png">
+                    </div>
+                    <!-- <div class="l-trouble__wrapper__calc">
                         <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble01.png"></div>
                         <div class="l-trouble__wrapper__calc-text">
                             <span>電気代</span>の<span>値上がり</span>で<br>
@@ -117,7 +122,7 @@
                             設置するのに<spa n>複数</spa>の<span>会社</span><br>
                             の契約で <span>費用</span>が、、、
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             </div>
