--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <section class="l-support">
             <div class="l-support__container">
                 <div class="l-support__wrap">
-                    <div class="l-support__wrap-ttl">太陽光発電・蓄電池の導入には<span>「補助金制度」</span>があります。</div>
+                    <div class="l-support__wrap-ttl">太陽光発電・蓄電池の導入には<wbr><span>「補助金制度」</span>があります。</div>
                     <div class="l-support__wrap-text">
                         太陽光発電・蓄電池の導入には、国や各自治体の補助金制度が利用できるケースが多くあります。
                         太陽光発電や蓄電池の種類、事業規模や地域などによって補助される金額は異なり公募期間も異なっておりますが、
