--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP</title>
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel=”icon” href=“.src/img/logo.png”> <link rel="stylesheet" href="./public/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <script src="./public/js/index.js" defer></script>
     <script src="./public/js/swiper.js" defer></script>
@@ -420,8 +420,8 @@
                                         問い合わせ後の対応が早くスムーズでした。
                                     </div>
                                     <div class="l-voice__slider__wrap-text">
-                                        最近の電気料金のエアげで太陽光パネルの導入を検討していました。
-                                        問い合わせ後の導入趣味レーションや見積もり作成なども、スピーディーかつ丁寧に対応してくれました。
+                                        最近の電気料金の値上げで太陽光パネルの導入を検討していました。
+                                        問い合わせ後の導入シュミレーションや見積もり作成なども、スピーディーかつ丁寧に対応してくれました。
 
                                     </div>
                                 </div>
@@ -481,8 +481,8 @@
                                         問い合わせ後の対応が早くスムーズでした。
                                     </div>
                                     <div class="l-voice__slider__wrap-text">
-                                        最近の電気料金のエアげで太陽光パネルの導入を検討していました。
-                                        問い合わせ後の導入趣味レーションや見積もり作成なども、スピーディーかつ丁寧に対応してくれました。
+                                        最近の電気料金の値上げで太陽光パネルの導入を検討していました。
+                                        問い合わせ後の導入シュミレーションや見積もり作成なども、スピーディーかつ丁寧に対応してくれました。
 
                                     </div>
                                 </div>
@@ -518,8 +518,8 @@
                                 <div class="l-question__wrapper__list__anser-text">
                                     蓄電池の使い方は多く分けて2つあります。<br>
                                     ①日中に太陽光で発電した電力を蓄電池に貯めて、夜間に使用する方法。<br>
-                                    ②夜間のやすい電力を蓄電裏に貯めて、日中に使用する方法。<br>
-                                    どちらが良いのかは各ご家庭の再喝スタイルで異なりますので、どちらが無駄なく電気を使用できるのかはご相談ください。
+                                    ②夜間の安い電力を蓄電裏に貯めて、日中に使用する方法。<br>
+                                    どちらが良いのかは各ご家庭の生活スタイルで異なりますので、どちらが無駄なく電気を使用できるのかはご相談ください。
                                 </div>
                             </div>
                         </div>
@@ -535,7 +535,7 @@
                             <div class="l-question__wrapper__list-item">現地調査は何時間かかりますか？</div>
                             <div class="l-question__wrapper__list__anser">
                                 <div class="l-question__wrapper__list__anser-text">
-                                    設置のないようによって異なりますが、おおよそ1時間〜1時間半程度です。<br>
+                                    設置の内容によって異なりますが、おおよそ1時間〜1時間半程度です。<br>
                                     (設置する場所の構造、太陽光システム情報、配線状況等によって異なります。)</div>
                             </div>
                         </div>
@@ -557,7 +557,7 @@
                                 <div class="l-question__wrapper__list__anser-text">
                                     パネルが設置されている環境条件（立地・屋根や野立て等の置き場・周囲の環境）、パネルの種類（多結晶・単結晶）によって点検やメンテナンスの頻度は異なります。<br>
                                     一般的には、年1〜2のメンテナンス推奨及び環境整備（草刈り等）と定期点検の義務化が定められています。
-                                    パネルにおきなひび割れ、電圧や抵抗値に異常が見られる場合は早急に修理をする必要があります。
+                                    パネルに大きなひび割れ、電圧や抵抗値に異常が見られる場合は早急に修理をする必要があります。
                                 </div>
                             </div>
                         </div>
@@ -566,7 +566,7 @@
                             <div class="l-question__wrapper__list__anser">
                                 <div class="l-question__wrapper__list__anser-text">
                                     点検、メンテナンスの費用については、パネルの枚数や面積、地域や現状の環境によって異なります。<br>
-                                    具体的な金額については、無料見積作成のため、現地調査に伺いますので、気になる点などありましたら、ぜひお問泡絵フォームよりご相談くださいませ。<br>
+                                    具体的な金額については、無料見積作成のため、現地調査に伺いますので、気になる点などありましたら、ぜひお問い合わせフォームよりご相談くださいませ。<br>
                                 </div>
                             </div>
                         </div>
@@ -585,7 +585,7 @@
                             <div class="l-question__wrapper__list__anser">
                                 <div class="l-question__wrapper__list__anser-text">
                                     基本的には、30分〜1時間程度となります。<br>
-                                    もしも雨天等、パエんるが発電していないと正確な数値が出せないこともあるため、老婆愛によっては日程の変更をお願いしておりますので、ご了承くださいませ。</div>
+                                    もしも雨天等、パネルが発電していないと正確な数値が出せないこともあるため、場合によっては日程の変更をお願いしておりますので、ご了承くださいませ。</div>
                             </div>
                         </div>
                         <div class="l-question__wrapper__list">
@@ -593,7 +593,7 @@
                             <div class="l-question__wrapper__list__anser">
                                 <div class="l-question__wrapper__list__anser-text">
                                     点検をしていないことによって、発電効率の低下や事故のリスクを高めるだけでなく、発火の恐れや、認定取消処分もあるため、しっかりと点検を実施することをオススメいたします。<br>
-                                    また、メーカー圃場等も使えないことになり損をしてしまいますので、定期的に行っていきましょう。
+                                    また、メーカー保証等も使えないことになり損をしてしまいますので、定期的に行っていきましょう。
                                 </div>
                             </div>
                         </div>
