--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP</title>
-    <link rel=”icon” href=“.src/img/logo.png”> <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="shortcut icon" href="src/img/logo.ico">
+    <link rel="stylesheet" href="./public/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <script src="./public/js/index.js" defer></script>
     <script src="./public/js/swiper.js" defer></script>
