--- a/index.html
+++ b/index.html
@@ -96,34 +96,6 @@
                     <div class="l-trouble__wrapper-spimg">
                         <img src="./src/img/section__sp.png">
                     </div>
-                    <!-- <div class="l-trouble__wrapper__calc">
-                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble01.png"></div>
-                        <div class="l-trouble__wrapper__calc-text">
-                            <span>電気代</span>の<span>値上がり</span>で<br>
-                            節電している
-                        </div>
-                    </div>
-                    <div class="l-trouble__wrapper__calc">
-                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble02.png"></div>
-                        <div class="l-trouble__wrapper__calc-text">
-                            節電のために太陽光パネルを<br>
-                            つけたいけど<span>メンテナンス</span>が面倒
-                        </div>
-                    </div>
-                    <div class="l-trouble__wrapper__calc">
-                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble03.png"></div>
-                        <div class="l-trouble__wrapper__calc-text">
-                            太陽光パネルを設置したいけど<br>
-                            <span>費用</span>が<span>高い</span>
-                        </div>
-                    </div>
-                    <div class="l-trouble__wrapper__calc">
-                        <div class="l-trouble__wrapper__calc-img"><img src="./src/img/trouble04.png"></div>
-                        <div class="l-trouble__wrapper__calc-text">
-                            設置するのに<spa n>複数</spa>の<span>会社</span><br>
-                            の契約で <span>費用</span>が、、、
-                        </div>
-                    </div> -->
                 </div>
             </div>
             </div>
@@ -181,8 +153,8 @@
                         <div class="l-reason__inner__right-text">
                             太陽光パネル・蓄電池を設置する建物や屋根の耐久性を考慮し、
                             また費用面や経済効果も含め最適なプランをご提案いたします。
-                            「どれぐらいの太陽光パネルが設置できるのか」「設置場所はどこが最適か」といった、
-                            導入に関する疑問や不安を解消し、責任を持ってサポートいたします。
+                            「どれぐらいの太陽光パネルが設置できるのか」「設置場所はどこが最適か」
+                            といった、導入に関する疑問や不安を解消し、責任を持ってサポートいたします。
                         </div>
                     </div>
                 </div>
@@ -199,12 +171,11 @@
                         工程から施工まで1社完結できるから、<br>
                         中間マージンをかけずにコスト削減</div>
                     <div class="l-reason__inner__left-text">
-                        WBHでは、各メーカーごとの施工ID(太陽光発電の施工・販売を行うための資格)
-                        を保持し、現地調査から設置工事、アフターメンテナンスまでワンストップで対応。
-                        自社施工だからこそ、中間マージンなどの余計な費用を掛けず、ご負担の少ないご提案が可能です。
+                        WBHでは、各メーカーごとの施工ID（太陽光発電の施工・販売を行うための資格）を保持し
+                        、現地調査から設置工事、アフターメンテナンスまでワンストップで対応。自社施工だからこそ、
+                        中間マージンなどの余計な費用を掛けず、ご負担の少ないご提案が可能です。
                         また、太陽光発電・蓄電池の導入には「国の補助金制度」もございます。
-                        弊社にて親衛のお手伝いもしておりますので、お安心ください。
-                    </div>
+                        弊社にて申請のお手伝いもしておりますので、ご安心ください。 </div>
                 </div>
             </div>
 
@@ -219,10 +190,9 @@
                         小工事から大規模工事まで、<br>
                         アフターメンテナンスも充実！</div>
                     <div class="l-reason__inner__right-text">
-                        ご家庭から産業用まで、建物の面積いや規模に合わせて設置工事を対応。
-                        また弊社はメーカーが行なっていない、サーモグラフィーを使用したパネルの点検を行っております。
-                        より詳細な点検を行い、故障箇所が見つかった場合は、交換・修理まですべて自社で対応可能です！
-                    </div>
+                        ご家庭から産業用まで、建物の面積や規模に合わせて設置工事を対応。
+                        また弊社はメーカーが行っていない、サーモグラフィーを使用したパネルの点検を行っております。
+                        より詳細な点検を行い、故障個所が見つかった場合は、交換・修理まですべて自社で対応可能です！ </div>
                 </div>
             </div>
         </section>
@@ -233,8 +203,10 @@
                     <div class="l-support__wrap-ttl">太陽光発電・蓄電池の導入には<wbr><span>「補助金制度」</span>があります。</div>
                     <div class="l-support__wrap-text">
                         太陽光発電・蓄電池の導入には、国や各自治体の補助金制度が利用できるケースが多くあります。
-                        太陽光発電や蓄電池の種類、事業規模や地域などによって補助される金額は異なり公募期間も異なっておりますが、
-                        弊社にてお客様に合わせた帆預金制度をご提案いたします。また、補助金制度に関しまして気になる点などございましたら、お気軽にお問い合わせくださいませ。
+                        太陽光発電や蓄電池の種類、事業規模や地域などによって補助される金額は異なり、
+                        公募期間も異なっておりますが、弊社にてお客様に合わせた補助金制度をご提案いたします。
+                        また、補助金申請の際のアドバイスや手続きのお手伝いを行っております。
+                        補助金制度に関しまして気になる点などございましたら、お気軽にお問い合わせくださいませ。
                     </div>
 
                     <div class="l-support__wrap-reduction">
