--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
             </div>
             <div class="l-hero__CV">
                 <div class="l-hero__container">
-                    <a href="">
+                    <a href="#">
                         <img src="./src/img/cv.png">
                     </a>
                 </div>
             </div>
         </section>
-
         <section class="l-trouble">
             <div class="l-trouble__container">
                 <div class="l-trouble-ttl">こんな経験ありませんか？</div>
