--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="l-header">
-            <div class="l-header__logo"><img src="./src/img/logo.png"></div>
+            <div class="l-header__logo"><a href="#"><img src="./src/img/logo.png"></a></div>
             <div class="l-header__nav">
                 <div class="l-header__nav-item"><a href="#reason">選ばれる3つの理由</a></div>
                 <div class="l-header__nav-item"><a href="#flow">設置までの流れ</a></div>
@@ -31,7 +31,7 @@
     <header class="l-header__sp">
         <div class="l-header__sp__wrap">
             <div class="l-header__sp__inner">
-                <div class="l-header__sp-logo"><img src="./src/img/logo.png"></div>
+                <div class="l-header__sp-logo"><a href="#"><img src="./src/img/logo.png"></a></div>
                 <buttom class="l-drawer__button">
                     <span></span>
                     <span></span>
