--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="l-header">
-            <div class="l-header__logo"><a href="#"><img src="./src/img/logo.png"></a></div>
+            <div class="l-header__logo"><a href="./"><img src=" ./src/img/logo.png"> </a> </div>
             <div class="l-header__nav">
                 <div class="l-header__nav-item"><a href="#reason">選ばれる3つの理由</a></div>
                 <div class="l-header__nav-item"><a href="#flow">設置までの流れ</a></div>
@@ -25,13 +25,13 @@
                 <div class="l-header__nav-item"><a href="#voice">お客様の声</a></div>
                 <div class="l-header__nav-item"><a href="#question">よくある質問</a></div>
             </div>
-            <div class="l-header__inquiry"><a href=""><img src="./src/img/inquiry.png"></a></div>
+            <div class="l-header__inquiry"><a href="https://wbh-inc.com/contact/"><img src="./src/img/inquiry.png"></a></div>
         </div>
     </header>
     <header class="l-header__sp">
         <div class="l-header__sp__wrap">
             <div class="l-header__sp__inner">
-                <div class="l-header__sp-logo"><a href="#"><img src="./src/img/logo.png"></a></div>
+                <div class="l-header__sp-logo"><a href="./"><img src="./src/img/logo.png"></a></div>
                 <buttom class="l-drawer__button">
                     <span></span>
                     <span></span>
@@ -57,7 +57,7 @@
                                 <a class="l-drawer__nav__link" href="#question">よくある質問</a>
                             </li>
                         </ul>
-                        <a href="#">
+                        <a href="https://wbh-inc.com/contact/">
                             <div class="c-CV__btn">
                                 <div class="c-CV__btn-text">お問い合わせはこちら</div>
                             </div>
@@ -79,7 +79,7 @@
             <div class="l-hero__CV">
                 <div class="l-hero__container">
                     <a href="#">
-                        <img src="./src/img/cv.png">
+                        <img src="./src/img/CV.png">
                     </a>
                 </div>
             </div>
@@ -576,8 +576,7 @@
         <div class="l-footer">
             <div class="l-footer__wrap">
                 <img src="./src/img/footer.png">
-
-                <a href="#" class="l-footer__wrap-ttl">
+                <a href="https://wbh-inc.com/contact/" class="l-footer__wrap-ttl">
                     <span>お問い合わせ</span>
                 </a>
             </div>
