--- a/index.html
+++ b/index.html
@@ -228,22 +228,18 @@
                                 <div class="l-flow__inner__list-item-number">1</div>
                             </div>
                         </div>
-
                         <div class="l-flow__inner__list">
                             <div class="l-flow__inner__list-triangle"></div>
                         </div>
-
                         <div class="l-flow__inner__list">
                             <div class="l-flow__inner__list-item">
-                                現地調査・お見積もり作成
+                                現地調査・<wbr>お見積もり作成
                                 <div class="l-flow__inner__list-item-number">2</div>
                             </div>
                         </div>
-
                         <div class="l-flow__inner__list">
                             <div class="l-flow__inner__list-triangle"></div>
                         </div>
-
                         <div class="l-flow__inner__list">
                             <div class="l-flow__inner__list-item">
                                 ご契約
