画像の変更

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <script src="./public/js/index.js" defer></script>
     <script src="./public/js/swiper.js" defer></script>
-
 </head>
 
 <body>
@@ -482,7 +481,7 @@
                             <div class="l-question__wrapper__list-item">蓄電池を設置したら電気代は節約できますか？</div>
                             <div class="l-question__wrapper__list__anser">
                                 <div class="l-question__wrapper__list__anser-text">
-                                    蓄電池の使い方は多く分けて2つあります。<br>
+                                    蓄電池の使い方は大きく分けて2つあります。<br>
                                     ①日中に太陽光で発電した電力を蓄電池に貯めて、夜間に使用する方法。<br>
                                     ②夜間の安い電力を蓄電裏に貯めて、日中に使用する方法。<br>
                                     どちらが良いのかは各ご家庭の生活スタイルで異なりますので、どちらが無駄なく電気を使用できるのかはご相談ください。
